@@ -1,0 +1,3 @@
+
+PASS Index cursor - indexed values updated during iteration
+
